[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Wall/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/separator.png" type="Texture" id=3]
[ext_resource path="res://Paddle/Paddle.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/right_pallete.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 200 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Graphics" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Graphics"]
margin_right = 640.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 1 )

[node name="ScoreLabel" type="Label" parent="Graphics"]
margin_left = 305.0
margin_top = 13.0
margin_right = 335.0
margin_bottom = 27.0
text = "0   0"
align = 1

[node name="Separator" type="Sprite" parent="Graphics"]
position = Vector2( 320, 199 )
texture = ExtResource( 3 )

[node name="WallContainer" type="Node2D" parent="."]

[node name="Ceiling" parent="WallContainer" instance=ExtResource( 2 )]
position = Vector2( 320, -10 )

[node name="Floor" parent="WallContainer" instance=ExtResource( 2 )]
position = Vector2( 320, 410 )

[node name="LeftWall" parent="WallContainer" instance=ExtResource( 2 )]
bouncy = false

[node name="CollisionShape2D" parent="WallContainer/LeftWall" index="0"]
position = Vector2( -10, 200 )
shape = SubResource( 1 )

[node name="RightWall" parent="WallContainer" instance=ExtResource( 2 )]
bouncy = false

[node name="CollisionShape2D" parent="WallContainer/RightWall" index="0"]
position = Vector2( 650, 200 )
shape = SubResource( 2 )

[node name="PaddleContainer" type="Node2D" parent="."]

[node name="LeftPaddle" parent="PaddleContainer" instance=ExtResource( 4 )]
position = Vector2( 30, 200 )

[node name="RightPaddle" parent="PaddleContainer" instance=ExtResource( 4 )]
position = Vector2( 610, 200 )
paddle_location = 1

[node name="Sprite" parent="PaddleContainer/RightPaddle" index="0"]
texture = ExtResource( 5 )

[node name="BallContainer" type="Node2D" parent="."]

[node name="BallSpawn" type="Position2D" parent="BallContainer"]
position = Vector2( 320, 200 )

[connection signal="ball_exited" from="WallContainer/LeftWall" to="." method="ball_exited_left"]
[connection signal="ball_exited" from="WallContainer/RightWall" to="." method="ball_exited_right"]

[editable path="WallContainer/LeftWall"]
[editable path="WallContainer/RightWall"]
[editable path="PaddleContainer/RightPaddle"]
